--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "build": "npm run eslint && babel --stage 1 ./src --out-dir ./lib",
     "prepublish": "npm run build"
   },
+  "browserify": {
+    "transform": [
+      "babelify"
+    ]
+  },
   "keywords": [
     "react",
     "react-component",
