--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,9 @@
 {
-  "breakConfig": true,
-  "stage": 1,
+  "presets": [
+    "es2015",
+    "stage-1"
+  ],
   "plugins": [
-    "dev-expression"
+    "transform-react-jsx"
   ]
 }
