--- a/package.json
+++ b/package.json
@@ -55,6 +55,9 @@
     "babel-eslint": "^4.1.3",
     "babel-loader": "^5.3.2",
     "babel-plugin-dev-expression": "^0.1.0",
+    "babel-plugin-transform-react-jsx": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-stage-1": "^6.1.18",
     "babel-runtime": "^5.8.25",
     "babelify": "^6.1.3",
     "browserify-istanbul": "^0.2.1",
